2015-09-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.11 released.

2015-09-30  Carl Hetherington  <cth@carlh.net>

	* Fix various confusions with subtitles and
	changing video frame rates.

2015-09-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.10 released.

2015-09-29  Carl Hetherington  <cth@carlh.net>

	* Improve fix for failure to analyse some audio.

2015-09-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.9 released.

2015-09-28  c.hetherington  <cth@carlh.net>

	* Fix update of display when changing DCP video rate (#699).

2015-09-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.8 released.

2015-09-28  c.hetherington  <cth@carlh.net>

	* Fix problems with audio analysis of some combined
	video/audio files.

	* Fix mis-identification of a folder of images
	as a DCP in some cases.

2015-09-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.7 released.

2015-09-26  Carl Hetherington  <cth@carlh.net>

	* Fix crash with embedded subtitles with some
	video files.

	* Version 2.3.6 released.

2015-09-25  Carl Hetherington  <cth@carlh.net>

	* Fix assertion failure when loading .MTS files (#702).

	* Fix incorrect hint about 3D content in a 2D DCP.

	* Detect and convert from non-UTF-8
	subtitle encodings.

2015-09-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.5 released.

2015-09-20  Carl Hetherington  <cth@carlh.net>

	* Fix setting of frame rate when loading
	image folders.

2015-09-18  Carl Hetherington  <cth@carlh.net>

	* Add another upmixer which is a simpler
	matrix-type thing with no filtering
	(apart from Lfe).

2015-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.4 released.

2015-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.3 released.

2015-09-16  Carl Hetherington  <cth@carlh.net>

	* Fix exception on adding an empty folder
	as content (#691).

	* Add config option for default standard
	(SMPTE / Interop).

2015-09-16  c.hetherington  <cth@carlh.net>
