@@ -1,3 +1,7 @@
+2015-09-30  c.hetherington  <cth@carlh.net>
+
+	* Fix broken video frame rate override control.
+
 2015-09-30  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.3.11 released.
